@@ -14,7 +14,6 @@ import javax.lang.model.element.Modifier;
 import java.io.File;
 import java.io.InputStream;
 import java.io.InputStreamReader;
-import java.util.Collections;
 import java.util.Comparator;
 import java.util.List;
 import java.util.stream.StreamSupport;
@@ -134,7 +133,7 @@ public class DyeColorGenerator extends MinestomCodeGenerator {
 
         // Write files to outputFolder
         writeFiles(
-                Collections.singletonList(
+                List.of(
                         JavaFile.builder("net.minestom.server.color", dyeColorEnum.build())
                                 .indent("    ")
                                 .skipJavaLangImports(true)
